--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/markdoc": "^0.13.0",
+    "@astrojs/mdx": "^4.2.0",
     "@astrojs/vercel": "^8.1.2",
     "astro": "^5.5.2"
   }
